# nanobots-ddns

./: .dockerignore  .gitignore  README.md  compose.yaml  pyproject.toml
.github/workflows/: pages.yml
docker/: ns.dockerfile  web.dockerfile
docs/: _config.yml  index.md  security.md  selfhosting.md
docs/ddns-types/: index.md  multi.md  single.md  v6.md
example-clients/: homelab-multiple-interfaces.zsh  v6m.zsh
nanobots_ddns/: __main__.py  security.py  util.py
nanobots_ddns/dns/: __main__.py  nameserver.py  settings.py
nanobots_ddns/web/: __main__.py  ratelimit.py  settings.py  util.py  webserver.py
