[project]
name = "nanobots-ddns"
version = "0.1.1"
description = "Anonymous DDNS service for the nanobot swarm"
authors = [
    {name = "Ben Klein",email = "robobenklein@unhexium.net"}
]
readme = "README.md"
requires-python = ">=3.13,<4"
dependencies = [
    "loguru (>=0.7.3,<0.8.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "pydantic-settings (>=2.13.1,<3.0.0)",
    "bottle (>=0.13.4,<0.14.0)",
    "pycryptodome (>=3.23.0,<4.0.0)",
    "dnspython (>=2.8.0,<3.0.0)",
    "valkey[libvalkey] (>=6.1.1,<7.0.0)",
    "limits[valkey] (>=5.8.0,<6.0.0)",
    "nserver (>=3.1.0,<4.0.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^26.1.0"
